Added DELETE API to STAC transactions
* Updated openapi spec for DELETE operation
* Will delete STAC Items and assets from database
* Added integration tests
